python/testData/inspections/PyUnresolvedReferencesInspection/classInClassBody.py
class C:
    print(<error descr="Unresolved reference 'C'">C</error>) #fail
    def f(self):
        print(C) #pass